--- a/presentation/src/main/res/menu/menu_main_navi_drawer.xml
+++ b/presentation/src/main/res/menu/menu_main_navi_drawer.xml
@@ -3,17 +3,21 @@
 
     <item
         android:id="@+id/item_notice"
+        android:icon="@drawable/ic_notice"
         android:title="공지" />
 
     <item
         android:id="@+id/item_view_my_post"
+        android:icon="@drawable/ic_see_my_post"
         android:title="내가 쓴 글 보기" />
 
     <item
         android:id="@+id/item_view_like_post"
+        android:icon="@drawable/ic_heart_post"
         android:title="좋아한 글 보기" />
 
     <item
         android:id="@+id/item_logout"
+        android:icon="@drawable/ic_logout"
         android:title="로그아웃"/>
 </menu>
