회원가입 관련 activity 및 fragment 패키지 수정

--- a/presentation/src/main/res/layout/fragment_auth_code_input_page.xml
+++ b/presentation/src/main/res/layout/fragment_auth_code_input_page.xml
@@ -5,7 +5,7 @@
     <data>
         <variable
             name="authCodeInput"
-            type="com.team_ia.idea_archive_android.ui.main.AuthCodeInputFragment" />
+            type="com.team_ia.idea_archive_android.ui.signup.AuthCodeInputFragment" />
     </data>
 
     <androidx.constraintlayout.widget.ConstraintLayout
