--- a/presentation/src/main/res/values/colors.xml
+++ b/presentation/src/main/res/values/colors.xml
@@ -18,4 +18,5 @@
     <color name="my_page_background">#FFF2F2F2</color>
     <color name="incorrect_red">#FFFF3120</color>
     <color name="input_background">#F1F1F5</color>
+    <color name="separation">#E6E6E6</color>
 </resources>
