:memo: :: Notice 기능 주석처리
:: Notice 기능 주석처리

--- a/presentation/src/main/res/layout/activity_main_page.xml
+++ b/presentation/src/main/res/layout/activity_main_page.xml
@@ -224,22 +224,22 @@
             app:layout_constraintStart_toStartOf="@id/g_btn_search_s"
             app:layout_constraintTop_toTopOf="@id/g_tab_bar_t" />
 
-        <TextView
-            android:id="@+id/tv_write_notice_bubble"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_marginBottom="26dp"
-            android:background="@drawable/bg_write_post_bubble"
-            android:elevation="8dp"
-            android:fontFamily="@font/pretendard_regular"
-            android:paddingStart="10dp"
-            android:paddingTop="2dp"
-            android:text="공지글 작성"
-            android:textColor="@color/white"
-            android:textSize="14sp"
-            app:layout_constraintBottom_toTopOf="@id/tv_write_post_bubble"
-            app:layout_constraintEnd_toEndOf="@id/g_tv_write_post_bubble_e"
-            app:layout_constraintStart_toStartOf="@id/g_tv_write_post_bubble_s" />
+<!--        <TextView-->
+<!--            android:id="@+id/tv_write_notice_bubble"-->
+<!--            android:layout_width="wrap_content"-->
+<!--            android:layout_height="wrap_content"-->
+<!--            android:layout_marginBottom="26dp"-->
+<!--            android:background="@drawable/bg_write_post_bubble"-->
+<!--            android:elevation="8dp"-->
+<!--            android:fontFamily="@font/pretendard_regular"-->
+<!--            android:paddingStart="10dp"-->
+<!--            android:paddingTop="2dp"-->
+<!--            android:text="공지글 작성"-->
+<!--            android:textColor="@color/white"-->
+<!--            android:textSize="14sp"-->
+<!--            app:layout_constraintBottom_toTopOf="@id/tv_write_post_bubble"-->
+<!--            app:layout_constraintEnd_toEndOf="@id/g_tv_write_post_bubble_e"-->
+<!--            app:layout_constraintStart_toStartOf="@id/g_tv_write_post_bubble_s" />-->
 
         <TextView
             android:id="@+id/tv_write_post_bubble"
@@ -273,19 +273,19 @@
             app:layout_constraintStart_toStartOf="@id/g_fbtn_main_page_floating_button_s"
             app:rippleColor="@color/primary" />
 
-        <com.google.android.material.floatingactionbutton.FloatingActionButton
-            android:id="@+id/fbtn_write_notice"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:background="@drawable/bg_floatingbutton"
-            android:backgroundTint="@color/primary"
-            android:src="@drawable/ic_notice"
-            app:borderWidth="0dp"
-            app:fabSize="mini"
-            android:layout_marginBottom="50dp"
-            app:layout_constraintBottom_toBottomOf="parent"
-            app:layout_constraintEnd_toEndOf="@id/g_fbtn_write_post_floating_button_e"
-            app:layout_constraintStart_toStartOf="@id/g_fbtn_write_post_floating_button_s" />
+<!--        <com.google.android.material.floatingactionbutton.FloatingActionButton-->
+<!--            android:id="@+id/fbtn_write_notice"-->
+<!--            android:layout_width="wrap_content"-->
+<!--            android:layout_height="wrap_content"-->
+<!--            android:background="@drawable/bg_floatingbutton"-->
+<!--            android:backgroundTint="@color/primary"-->
+<!--            android:src="@drawable/ic_notice"-->
+<!--            app:borderWidth="0dp"-->
+<!--            app:fabSize="mini"-->
+<!--            android:layout_marginBottom="50dp"-->
+<!--            app:layout_constraintBottom_toBottomOf="parent"-->
+<!--            app:layout_constraintEnd_toEndOf="@id/g_fbtn_write_post_floating_button_e"-->
+<!--            app:layout_constraintStart_toStartOf="@id/g_fbtn_write_post_floating_button_s" />-->
 
         <com.google.android.material.floatingactionbutton.FloatingActionButton
             android:id="@+id/fbtn_write_post"
