--- a/presentation/src/main/res/layout/activity_main_page.xml
+++ b/presentation/src/main/res/layout/activity_main_page.xml
@@ -9,7 +9,7 @@
 
     <androidx.drawerlayout.widget.DrawerLayout
         android:id="@+id/main_page_drawer_layout"
-        android:layout_width="wrap_content"
+        android:layout_width="match_parent"
         android:layout_height="match_parent">
 
         <androidx.constraintlayout.widget.ConstraintLayout
@@ -288,13 +288,174 @@
 
         </androidx.constraintlayout.widget.ConstraintLayout>
 
-        <com.google.android.material.navigation.NavigationView
-            android:id="@+id/nv_main_navigation"
-            android:layout_width="match_parent"
+        <androidx.constraintlayout.widget.ConstraintLayout
+            android:layout_width="wrap_content"
             android:layout_height="match_parent"
-            android:fitsSystemWindows="true"
-            app:itemIconPadding="16dp"
-            app:menu="@menu/menu_main_navi_drawer" />
+            android:layout_gravity="end">
+            <androidx.constraintlayout.widget.Guideline
+                android:id="@+id/g_iv_navi_header_profile_s"
+                android:layout_width="match_parent"
+                android:layout_height="0.5dp"
+                android:orientation="vertical"
+                app:layout_constraintGuide_percent="0.0741" />
+
+            <androidx.constraintlayout.widget.Guideline
+                android:id="@+id/g_iv_navi_header_profile_e"
+                android:layout_width="match_parent"
+                android:layout_height="0.5dp"
+                android:orientation="vertical"
+                app:layout_constraintGuide_percent="0.2519" />
+
+            <androidx.constraintlayout.widget.Guideline
+                android:id="@+id/g_iv_navi_header_profile_t"
+                android:layout_width="match_parent"
+                android:layout_height="0.5dp"
+                android:orientation="horizontal"
+                app:layout_constraintGuide_percent="0.0794" />
+
+            <androidx.constraintlayout.widget.Guideline
+                android:id="@+id/g_iv_navi_header_profile_b"
+                android:layout_width="match_parent"
+                android:layout_height="0.5dp"
+                android:orientation="horizontal"
+                app:layout_constraintGuide_percent="0.1363" />
+
+            <androidx.constraintlayout.widget.Guideline
+                android:id="@+id/g_tv_navi_header_name_s"
+                android:layout_width="match_parent"
+                android:layout_height="0.5dp"
+                android:orientation="vertical"
+                app:layout_constraintGuide_percent="0.3111" />
+
+            <androidx.constraintlayout.widget.Guideline
+                android:id="@+id/g_tv_navi_header_name_e"
+                android:layout_width="match_parent"
+                android:layout_height="0.5dp"
+                android:orientation="vertical"
+                app:layout_constraintGuide_percent="0.5185" />
+
+            <androidx.constraintlayout.widget.Guideline
+                android:id="@+id/g_tv_navi_header_name_t"
+                android:layout_width="match_parent"
+                android:layout_height="0.5dp"
+                android:orientation="horizontal"
+                app:layout_constraintGuide_percent="0.0877" />
+
+            <androidx.constraintlayout.widget.Guideline
+                android:id="@+id/g_tv_navi_header_name_b"
+                android:layout_width="match_parent"
+                android:layout_height="0.5dp"
+                android:orientation="horizontal"
+                app:layout_constraintGuide_percent="0.1114" />
+
+            <androidx.constraintlayout.widget.Guideline
+                android:id="@+id/g_tv_navi_header_email_s"
+                android:layout_width="match_parent"
+                android:layout_height="0.5dp"
+                android:orientation="vertical"
+                app:layout_constraintGuide_percent="0.3111" />
+
+            <androidx.constraintlayout.widget.Guideline
+                android:id="@+id/g_tv_navi_header_email_e"
+                android:layout_width="match_parent"
+                android:layout_height="0.5dp"
+                android:orientation="vertical"
+                app:layout_constraintGuide_percent="0.7074" />
+
+            <androidx.constraintlayout.widget.Guideline
+                android:id="@+id/g_tv_navi_header_email_t"
+                android:layout_width="match_parent"
+                android:layout_height="0.5dp"
+                android:orientation="horizontal"
+                app:layout_constraintGuide_percent="0.1114" />
+
+            <androidx.constraintlayout.widget.Guideline
+                android:id="@+id/g_tv_navi_header_email_b"
+                android:layout_width="match_parent"
+                android:layout_height="0.5dp"
+                android:orientation="horizontal"
+                app:layout_constraintGuide_percent="0.1280" />
+
+            <androidx.constraintlayout.widget.Guideline
+                android:id="@+id/g_iv_go_profile_button_s"
+                android:layout_width="match_parent"
+                android:layout_height="0.5dp"
+                android:orientation="vertical"
+                app:layout_constraintGuide_percent="0.9111" />
+
+            <androidx.constraintlayout.widget.Guideline
+                android:id="@+id/g_iv_go_profile_button_e"
+                android:layout_width="match_parent"
+                android:layout_height="0.5dp"
+                android:orientation="vertical"
+                app:layout_constraintGuide_percent="0.9407" />
+
+            <androidx.constraintlayout.widget.Guideline
+                android:id="@+id/g_iv_go_profile_button_t"
+                android:layout_width="match_parent"
+                android:layout_height="0.5dp"
+                android:orientation="horizontal"
+                app:layout_constraintGuide_percent="0.0995" />
+
+            <androidx.constraintlayout.widget.Guideline
+                android:id="@+id/g_iv_go_profile_button_b"
+                android:layout_width="match_parent"
+                android:layout_height="0.5dp"
+                android:orientation="horizontal"
+                app:layout_constraintGuide_percent="0.1161" />
+
+
+            <ImageView
+                android:id="@+id/iv_navi_header_profile_image"
+                android:layout_width="0dp"
+                android:layout_height="0dp"
+                app:layout_constraintBottom_toBottomOf="@id/g_iv_navi_header_profile_b"
+                app:layout_constraintEnd_toEndOf="@id/g_iv_navi_header_profile_e"
+                app:layout_constraintStart_toStartOf="@id/g_iv_navi_header_profile_s"
+                app:layout_constraintTop_toTopOf="@id/g_iv_navi_header_profile_t" />
+
+            <TextView
+                android:id="@+id/tv_navi_header_name"
+                android:layout_width="0dp"
+                android:layout_height="0dp"
+                android:fontFamily="@font/pretendard_bold"
+                android:textColor="@color/black"
+                android:textSize="14sp"
+                app:layout_constraintBottom_toBottomOf="@id/g_tv_navi_header_name_b"
+                app:layout_constraintEnd_toEndOf="@id/g_tv_navi_header_name_e"
+                app:layout_constraintStart_toStartOf="@id/g_tv_navi_header_name_s"
+                app:layout_constraintTop_toTopOf="@id/g_tv_navi_header_name_t" />
+
+            <TextView
+                android:id="@+id/tv_navi_header_email"
+                android:layout_width="0dp"
+                android:layout_height="0dp"
+                android:fontFamily="@font/pretendard_regular"
+                android:textSize="10sp"
+                app:layout_constraintBottom_toBottomOf="@id/g_tv_navi_header_email_b"
+                app:layout_constraintEnd_toEndOf="@id/g_tv_navi_header_email_e"
+                app:layout_constraintStart_toStartOf="@id/g_tv_navi_header_email_s"
+                app:layout_constraintTop_toTopOf="@id/g_tv_navi_header_email_t" />
+
+            <ImageView
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:background="@drawable/ic_go_profile_btn"
+                app:layout_constraintBottom_toBottomOf="@id/g_iv_go_profile_button_b"
+                app:layout_constraintEnd_toEndOf="@id/g_iv_go_profile_button_e"
+                app:layout_constraintStart_toStartOf="@id/g_iv_go_profile_button_s"
+                app:layout_constraintTop_toTopOf="@id/g_iv_go_profile_button_t" />
+
+            <com.google.android.material.navigation.NavigationView
+                android:id="@+id/nv_main_navigation"
+                android:layout_width="wrap_content"
+                android:layout_height="match_parent"
+                android:fitsSystemWindows="true"
+                app:itemIconPadding="16dp"
+                app:menu="@menu/menu_main_navi_drawer"
+                app:layout_constraintEnd_toEndOf="parent"
+                app:layout_constraintTop_toTopOf="parent"/>
+        </androidx.constraintlayout.widget.ConstraintLayout>
     </androidx.drawerlayout.widget.DrawerLayout>
 
 </layout>
